#219 test: 자바 21 -> 17로 재 변경